--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Avery Maytin, Anarina Murillo">
+<meta name="author" content="Avery Maytin and Anarina Murillo">
 <meta name="dcterms.date" content="2025-02-01">
 
 <title>Tutorial of Measurement Error Methods for Evaluating Blood Pressure using NHANES Data</title>
