--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Avery Maytin and Anarina Murillo">
+<meta name="author" content="Avery Maytin, Anarina Murillo">
 <meta name="dcterms.date" content="2025-02-01">
 
 <title>Tutorial of Measurement Error Methods for Evaluating Blood Pressure using NHANES Data</title>
@@ -195,6 +196,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="preface" class="level1 unnumbered">
 <h1 class="unnumbered">Preface</h1>
+<p>This tutorial is still undergoing construction (last updated February 2025)</p>
 
 
 </section>
